use javafx plugin to build distro.