@@ -1,28 +1,28 @@
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+}
 
-// Apply the application plugin to add support for building an application
-apply plugin: 'application'
-
-// In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 
 dependencies {
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+   testImplementation 'junit:junit:4.12'
 }
 
-// Define the main class for the application
 mainClassName = 'dem2k.DasViewer'
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': mainClassName
-        )
-    }
+application {
+    applicationDefaultJvmArgs = [ '--module-path=..\\lib', '--add-modules=javafx.controls,javafx.fxml' ]
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+task copyDependencies(type: Copy) {
+  from configurations.default
+  into 'build/libs'
 }
